Fix the Desktop App banner covering top links in the left sidebar.
Before this commit, while the banner is open you can't click on the
Home link.

(imported from commit 4d41bacc50d8115b4868fbda537c9bd64250040a)

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -305,6 +305,10 @@ a:hover code {
     max-width: 200px;
 }
 
+#left-sidebar {
+    z-index: 4;
+}
+
 #left-sidebar .brand {
     display: table-row;
 }
@@ -3372,7 +3376,7 @@ div.edit_bot {
     width: 100%;
     top: 41px;
     left: 0px;
-    z-index: 5;
+    z-index: 3;
 }
 
 #home .alert-bar {
